[package]
name = "prey"
version = "0.1.0"
edition = "2024"
authors = ["Renan Machado Santos <machadosantosrenan@gmail.com>"]
description = "PREY: A high-performance Packet Routing Engine Yield and Proxy framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/TaldoCrey/prey"
readme = "README.md"
keywords = ["proxy", "networking", "packet-engine", "load-balancer", "firewall"]
categories = ["network-programming", "asyncronous"]

[dependencies]
