[workspace]
members = [
    "crates/prey",
    "crates/prey-fire",
    "crates/prey-proxy"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Renan Machado Santos <machadosantosrenan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TaldoCrey/prey"
homepage = "https://github.com/TaldoCrey/prey"

