[package]
name = "prey"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "PREY: A high-performance Packet Routing Engine Yield and Proxy framework."
license.workspace = true
repository.workspace = true
keywords = ["proxy", "networking", "packet-engine", "load-balancer", "firewall"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
crossbeam-queue = "0.3.12"
libc = "0.2"
